project(honeyshell)
execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory bin)
set(SRC_LIST src)
set(OUTPUT_LIST bin)
# add_library(honeyshell ${SRC_LIST})
add_executable(${OUTPUT_LIST}/cat ${SRC_LIST}/cat.cpp)
add_executable(${OUTPUT_LIST}/cp ${SRC_LIST}/cp.cpp)
add_executable(${OUTPUT_LIST}/ln ${SRC_LIST}/ln.cpp)
add_executable(${OUTPUT_LIST}/ls ${SRC_LIST}/ls.cpp)
add_executable(${OUTPUT_LIST}/mkdir ${SRC_LIST}/mkdir.cpp)
add_executable(${OUTPUT_LIST}/more ${SRC_LIST}/more.cpp)
target_link_libraries(${OUTPUT_LIST}/more /usr/lib64/libcurses.so)
add_executable(${OUTPUT_LIST}/mv ${SRC_LIST}/mv.cpp)
add_executable(${OUTPUT_LIST}/rm ${SRC_LIST}/rm.cpp)
add_executable(${OUTPUT_LIST}/touch ${SRC_LIST}/touch.cpp)
add_executable(${OUTPUT_LIST}/xargs ${SRC_LIST}/xargs.cpp)
add_executable(honeyshell ${SRC_LIST}/honeyshell.cpp)
target_link_libraries(honeyshell /usr/lib64/libreadline.so)